# ChangeLog for net-misc/remmina
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/remmina/ChangeLog,v 1.27 2012/02/21 15:59:04 floppym Exp $

  21 Feb 2012; Mike Gilbert <floppym@gentoo.org> remmina-1.0.0-r1.ebuild,
  remmina-9999.ebuild:
  Fix dependencies for gtk3 use flag. Thanks to Daniel M. Weeks in bug 404579.

  20 Feb 2012; Mike Gilbert <floppym@gentoo.org> remmina-1.0.0-r1.ebuild,
  remmina-9999.ebuild:
  We only use libappindicator if building against gtk3.

  20 Feb 2012; Mike Gilbert <floppym@gentoo.org> metadata.xml,
  remmina-1.0.0-r1.ebuild, remmina-9999.ebuild:
  Add gtk3 use flag, bug 404579. Live ebuild is currently broken with USE=-gtk3.

  20 Feb 2012; Mike Gilbert <floppym@gentoo.org> -remmina-1.0.0.ebuild,
  remmina-1.0.0-r1.ebuild, remmina-9999.ebuild:
  Drop unique use flag. Bug 404579 by Daniel M. Weeks.

  20 Feb 2012; Mike Gilbert <floppym@gentoo.org> remmina-9999.ebuild:
  Drop libdir sed in live ebuild; fixed upstream.

  20 Feb 2012; Mike Gilbert <floppym@gentoo.org> remmina-1.0.0-r1.ebuild:
  Restore sed statement for bug 404587.

  17 Feb 2012; Markos Chandras <hwoarang@gentoo.org> metadata.xml:
  remove myself from metadata

*remmina-1.0.0-r1 (17 Feb 2012)

  17 Feb 2012; Mike Gilbert <floppym@gentoo.org>
  +files/remmina-1.0.0-desktop-file.patch,
  +files/remmina-1.0.0-fix-desktop-file.patch,
  +files/remmina-1.0.0-optional-gnome-keyring.patch, +remmina-1.0.0-r1.ebuild:
  Backport patches for desktop file and optional gnome-keyring.Bugs 403879 and
  404235.

  17 Feb 2012; Mike Gilbert <floppym@gentoo.org> remmina-9999.ebuild:
  Make gnome-keyring optional for bug 403879 by haarp.

  17 Feb 2012; Mike Gilbert <floppym@gentoo.org> remmina-1.0.0.ebuild,
  remmina-9999.ebuild:
  Adjust avahi and vte dependencies for bug 404211. Thanks to CFuga for
  reporting.

*remmina-1.0.0 (15 Feb 2012)

  15 Feb 2012; Mike Gilbert <floppym@gentoo.org> +remmina-1.0.0.ebuild: