@@ -9,15 +9,14 @@ DIST remmina-0.7.5.tar.gz 633137 RMD160 7dc6c58c3aa027cf3cb9f804e460e721f16c0b53
 DIST remmina-0.9.3.tar.gz 389744 RMD160 312aefd5781db1223ebe7d14e67fc5055a0784a9 SHA1 51585eb24d297f23bb51a23e3a4a767f9dd00083 SHA256 ea10eba6f60676f7ebfebd285884e41fbb081f3809064588564f53624a3cee82
 EBUILD remmina-0.7.5.ebuild 1395 RMD160 a3d60d4c87654e70f2a6efed4b4e2a38ab615ca0 SHA1 96e68a1bb7ed504ede5b0f974bb8ee709087575f SHA256 a5eb65dabb006949cfcc35570af01fa697ba1973589ef18623edc570de50cf7f
 EBUILD remmina-0.9.3.ebuild 1507 RMD160 07ef041486cfa2cfd248f78ffbd769a5f82731c2 SHA1 603b0eaccbd855c0fc7cf6ee7426671f69d76471 SHA256 0622c90818c093d69307bc4c7bf2181251babf6c9323998782310e50e0abdd5b
-EBUILD remmina-1.0.0-r1.ebuild 2118 RMD160 13b617313e804707f2f02b3f328080edd5b22b7f SHA1 3c22e209dffb27073051abb9e44cbe6d3e327edb SHA256 1251989510b558d993dc80829ee1d5286f1186f4a3a59069410c03cf332a8b90
-EBUILD remmina-9999.ebuild 1740 RMD160 5e16895849e0323e34739989924e573373ead0fe SHA1 05166a054a9f0873239ba82257b099e2196a0ecb SHA256 45992ceff0ea3d2f9cf3dc49e28ab560f7adff0215f2b198908281126ff7b398
-MISC ChangeLog 4198 RMD160 8162b69709ab7edc9ef9df94e2b2f1b9c13b80dc SHA1 a92d7917caed9d2ab3780fe505f93be9a15ef2d2 SHA256 6d7990a7b381cd3d5dacf07432b388203d093e5dd630501bed2c3c953bb9b4e5
+EBUILD remmina-1.0.0-r1.ebuild 1995 RMD160 37dad1bcb92155e2c1c7fae5148e8d50bf21b403 SHA1 7f268b7bdc8530006c130d5195fd4a71cf2c61ab SHA256 3bfbe3e3514224e533dc1d927dc915e7a5ca7a445457511d172e00b6b8152006
+EBUILD remmina-9999.ebuild 1634 RMD160 f8f2d2d680f8686fef05037f0f3d923533f41ea4 SHA1 5659589a8f957a66c305dbbc414df533fb14c014 SHA256 d0732ad7bca40bcd15b92db7c66be02e54cdde4a7cd7aaf5ab65aa5a8e766fcb
+MISC ChangeLog 4346 RMD160 405b631f42273a99650b262a43355abe42a273a7 SHA1 d656200de5990b3e8aa4f4d48ff244eed23431fd SHA256 71f0842a2a60df9e7354307b1132287ef5dbee495bf817aae8c360feff712830
 MISC metadata.xml 891 RMD160 f2d1ee00903b3b6544a54c2a2461795ed00dda73 SHA1 0c2770a9ee3e633f267b4883528a801488fac0e0 SHA256 8f5a4e99ec403771abd902e7f237dcb8a7e3020bbcc59df33ffd5149545f1495
-MISC remmina-1.0.0-r1.ebuild.orig 2056 RMD160 e1c1d5dcfa424e251fb11cd270d9740720e375be SHA1 b1ea3857fdb893a25625718e985f1574d9a97b6f SHA256 1b7400d953b4669962c49dccc345b89099f2bcadb72c590f5bb7e8fd13c16d5e
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iF4EAREIAAYFAk9Dv1YACgkQC77qH+pIQ6SLNgD9Ewm4NhGrjBXy3aVd3HZnre7j
-jabXNzQuKPsVs/nFyPIBAKIw4oSKB0k/BKjMg9rD8HpIubq6LJStLHTZdNVR1PYS
-=2SWq
+iF4EAREIAAYFAk9Y3pMACgkQC77qH+pIQ6RJJAD+LXZd5fq48h9+OveBvmdUaULL
+ouc5jpw/ehp9Artgf44A/j+LhsiYMmpBCr5IxJpDT2k4YXc1AICKI1A0yip+tA90
+=OxVD
 -----END PGP SIGNATURE-----
