@@ -1,6 +1,10 @@
 # ChangeLog for net-misc/remmina
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/remmina/ChangeLog,v 1.27 2012/02/21 15:59:04 floppym Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/remmina/ChangeLog,v 1.28 2012/03/08 16:30:05 floppym Exp $
+
+  08 Mar 2012; Mike Gilbert <floppym@gentoo.org> remmina-1.0.0-r1.ebuild,
+  remmina-9999.ebuild:
+  Remove gtk3 use flag per ssuominen. Bug 404579.
 
   21 Feb 2012; Mike Gilbert <floppym@gentoo.org> remmina-1.0.0-r1.ebuild,
   remmina-9999.ebuild:
